--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,32 +14,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KBTUHelper"
         tools:targetApi="31">
-
+        <activity
+            android:name=".UPDActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".NotesActivity" />
-
         <activity
             android:name=".AddNotesActivity"
             android:exported="false" />
-
         <activity
-            android:name=".MapActivity"
-            android:exported="false" />
-
+            android:exported="false"
+            android:name=".MapActivity" />
         <activity
-            android:name=".NewsActivity"
-            android:exported="false" />
-
+            android:exported="false"
+            android:name=".NewsActivity" />
     </application>
-
 
 </manifest>
