--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,28 +14,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KBTUHelper"
         tools:targetApi="31">
-        <activity
-            android:name=".UPDActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
-        <activity android:name=".NotesActivity" />
+
         <activity
-            android:name=".AddNotesActivity"
+            android:name=".MapActivity"
             android:exported="false" />
+
         <activity
-            android:exported="false"
-            android:name=".MapActivity" />
-        <activity
-            android:exported="false"
-            android:name=".NewsActivity" />
+            android:name=".NewsActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
