--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:theme="@style/Theme.KBTUHelper"
         tools:targetApi="31">
         <activity
-            android:name=".UPDActivity" />
+            android:name=".notes.UPDActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.App.SplashScreen">
             <intent-filter>
@@ -26,16 +26,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NotesActivity" />
+        <activity android:name=".notes.NotesActivity" />
         <activity
-            android:name=".AddNotesActivity"
+            android:name=".notes.AddNotesActivity"
             android:exported="false" />
         <activity
             android:exported="false"
-            android:name=".MapActivity" />
+            android:name=".map.MapActivity" />
         <activity
             android:exported="false"
-            android:name=".NewsActivity" />
+            android:name=".news.NewsActivity" />
     </application>
 
 </manifest>
